# CD2WAV

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  cdda_reader.cpp  cdda_reader.hpp  cddb_lookup.cpp  cddb_lookup.hpp  crash_handler.cpp  crash_handler.hpp  main.cpp  resource.rc  toc_check.cpp  wav_writer.cpp  wav_writer.hpp
build-mingw64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
